--- a/src/css/base/vars.css
+++ b/src/css/base/vars.css
@@ -11,8 +11,8 @@
     --mainColor100-color: #003058;
     --mainColor200-color: #046BA9;
 
-    --subColor100-color: #F0F9FF;
-    --subColor200-color: #BAE5FD;
+    --subColor100-color: #f0f9ff;
+    --subColor200-color: #bae5fd;
     --subColor300-color: #7ED0FB;
     --subColor400-color: #0380C6;
 
