--- a/src/css/pages/header.css
+++ b/src/css/pages/header.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 #header {
   position: fixed;
   left: 0;
@@ -14,9 +13,9 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(213, 239, 250, 0.2);
-  filter: blur(30px); /* 블러 필터 적용 */
-  z-index: -1; /* 배경만 뒤로 이동 */
+  background-color: rgba(213, 239, 250, 0.1);
+  backdrop-filter: blur(30px);
+  z-index: -1;
 }
 #header .header_inner {
   display: flex;
