--- a/src/css/pages/scss/graphic.scss
+++ b/src/css/pages/scss/graphic.scss
@@ -1,6 +1,6 @@
-#uxui {
+#graphic {
 
-  .uxui__wrap {
+  .graphic__wrap {
     display: flex;
     align-items: center;
     width: 200%;
@@ -10,15 +10,16 @@
   }
 
   article {
+    &.graphic__item {
 
-    &.uxui__item {
-      position: relative;
       max-width: 300px;
       flex-shrink: 0;
       // width: 28vw;
       // aspect-ratio: 1/1;
       color: #000;
       cursor: pointer;
+      border: 2px solid rgba(255, 255, 255, .5);
+      padding: 15px;
 
       &:hover {
         a {
@@ -44,6 +45,7 @@
       }
 
       a {
+        position: relative;
         display: inline-block;
         overflow: hidden;
 
@@ -68,8 +70,8 @@
 
       .num {
         position: absolute;
-        right: 10px;
-        top: -20px;
+        right: 0px;
+        top: -45px;
         font-family: var(--mainNum-font);
         font-size: 38px;
         color: rgba(255, 255, 255, .5);
@@ -113,14 +115,14 @@
           font-weight: 500;
           text-transform: uppercase;
           line-height: 1.2;
-          margin-bottom: 50px;
+          margin-bottom: 40px;
 
           &::after {
             content: "";
             width: 30px;
             height: 1px;
             position: absolute;
-            bottom: -25px;
+            bottom: -22px;
             left: 50%;
             transform: translateX(-50%);
             background-color: #fff;
@@ -128,6 +130,51 @@
         }
       }
 
+    }
+  }
+
+  .waves {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 15vh;
+    /*Fix for safari gap*/
+    min-height: 100px;
+    max-height: 150px;
+  }
+
+  /* Animation */
+  .parallax>use {
+    animation: move-forever 25s cubic-bezier(.55, .5, .45, .5) infinite;
+  }
+
+  .parallax>use:nth-child(1) {
+    animation-delay: -2s;
+    animation-duration: 7s;
+  }
+
+  .parallax>use:nth-child(2) {
+    animation-delay: -3s;
+    animation-duration: 10s;
+  }
+
+  .parallax>use:nth-child(3) {
+    animation-delay: -4s;
+    animation-duration: 13s;
+  }
+
+  .parallax>use:nth-child(4) {
+    animation-delay: -5s;
+    animation-duration: 20s;
+  }
+
+  @keyframes move-forever {
+    0% {
+      transform: translate3d(-90px, 0, 0);
+    }
+
+    100% {
+      transform: translate3d(85px, 0, 0);
     }
   }
 
