--- a/src/css/pages/scss/path.scss
+++ b/src/css/pages/scss/path.scss
@@ -25,6 +25,7 @@
 .jellyfish {
     position: absolute;
     animation: bounce-top 1s infinite;
+    z-index: 99;
 }
 
 .jellyfish2{
@@ -38,8 +39,9 @@
 }
 
 .jellyfish4{
-    left: 5%;
-    top: 5%;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0%;
 }
 
 .jellyfish5{
