--- a/src/css/pages/scss/work.scss
+++ b/src/css/pages/scss/work.scss
@@ -1,5 +1,3 @@
-
-
 #work {
     display: flex;
 
@@ -7,7 +5,8 @@
         position: absolute;
         left: 55%;
         display: flex;
-        width: 40%;
+        // width: 40%;
+        width: 770px;
         height: 100vh;
         justify-content: space-between;
         /* 컨테이너 높이를 화면 높이로 설정 */
@@ -16,38 +15,80 @@
             width: 45%;
             height: 100%;
             overflow: hidden;
-            background-color: rgba(0, 0, 0, .5);
+            background-color: rgba(255, 255, 255, .4);
+
+            .splide {
+                height: 35%;
+
+                .splide__track {
+                    overflow: visible;
+                    padding: 20px 0;
+
+
+                    .splide__slide {
+                        position: relative;
+                        width: 100%;
+                        height: 100%;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        color: #fff;
+                        cursor: pointer;
+
+                        &:hover {
+                            img {
+                                filter: grayscale(0%);
+                            }
+
+                            .web-icon{
+                                img{
+                                    filter: grayscale(0%);
+                                }
+                            }
+
+                        }
+
+                        img {
+                            display: inline-block;
+                            // width: 90%;
+                            height: 100%;
+                            filter: grayscale(100%);
+                            transition: .35s;
+                        }
+
+                        .web-icon {
+                            position: absolute;
+                            right: 25px;
+                            top: 10px;
+                            display: flex;
+                            gap: 5px;
+                            transition: .35s;
+
+
+                            img {
+                                width: auto;
+                                height: 35px;
+                                object-fit: cover;
+                                filter: grayscale(0%) invert(1);
+                               
+                            }
+                        }
+
+                    }
+                }
+            }
         }
-    
-        .splide__slide {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #fff;
-            cursor: pointer;
-        }
-    
-        .splide__slide img {
-            display: inline-block;
-            width: 90%;
-        }
-    
-        .splide__track {
-            overflow: visible;
-            padding: 20px 0;
-        }
-    
-        .splide {
-            height: 30%;
-            /* 슬라이더 전체 높이 */
-        }
+
+
+
+
+
     }
 
-    .work_left{
+    .work_left {
         position: relative;
         width: 55%;
         height: 100vh;
     }
 
-  
 }
