--- a/src/css/pages/work.css
+++ b/src/css/pages/work.css
@@ -6,7 +6,7 @@
   position: absolute;
   left: 55%;
   display: flex;
-  width: 40%;
+  width: 770px;
   height: 100vh;
   justify-content: space-between;
   /* 컨테이너 높이를 화면 높이로 설정 */
@@ -15,26 +15,50 @@
   width: 45%;
   height: 100%;
   overflow: hidden;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(255, 255, 255, 0.4);
 }
-#work .container .splide__slide {
+#work .container .splide-wrapper .splide {
+  height: 35%;
+}
+#work .container .splide-wrapper .splide .splide__track {
+  overflow: visible;
+  padding: 20px 0;
+}
+#work .container .splide-wrapper .splide .splide__track .splide__slide {
+  position: relative;
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #fff;
   cursor: pointer;
 }
-#work .container .splide__slide img {
+#work .container .splide-wrapper .splide .splide__track .splide__slide:hover img {
+  filter: grayscale(0%);
+}
+#work .container .splide-wrapper .splide .splide__track .splide__slide:hover .web-icon img {
+  filter: grayscale(0%);
+}
+#work .container .splide-wrapper .splide .splide__track .splide__slide img {
   display: inline-block;
-  width: 90%;
+  height: 100%;
+  filter: grayscale(100%);
+  transition: 0.35s;
 }
-#work .container .splide__track {
-  overflow: visible;
-  padding: 20px 0;
+#work .container .splide-wrapper .splide .splide__track .splide__slide .web-icon {
+  position: absolute;
+  right: 25px;
+  top: 10px;
+  display: flex;
+  gap: 5px;
+  transition: 0.35s;
 }
-#work .container .splide {
-  height: 30%;
-  /* 슬라이더 전체 높이 */
+#work .container .splide-wrapper .splide .splide__track .splide__slide .web-icon img {
+  width: auto;
+  height: 35px;
+  object-fit: cover;
+  filter: grayscale(0%) invert(1);
 }
 #work .work_left {
   position: relative;
