--- a/src/css/base/vars.css
+++ b/src/css/base/vars.css
@@ -8,7 +8,7 @@
     --mainKorSB-font: 'Pretendard-SemiBold';
     --mainKorB-font: 'Pretendard-Bold';
 
-    --mainColor100-color: #003058;
+    --mainColor100-color: rgb(0, 48, 88);
     --mainColor200-color: #046BA9;
 
     --subColor100-color: #f0f9ff;
