--- a/src/css/pages/scss/footer.scss
+++ b/src/css/pages/scss/footer.scss
@@ -2,17 +2,17 @@
     position: relative;
     overflow: hidden;
     height: 50vh;
-    background: linear-gradient(to bottom, #4385AF, #024A7B, #003058);
-    z-index: -2;
+    // background: linear-gradient(to bottom, #4385AF, #024A7B, #003058);
+
 
     .wsplide {
-        position: relative;
-        width: 100%;
-        height: 100%;
+        // position: relative;
+        z-index: 1;
 
         .splide {
             position: absolute;
             width: 100%;
+            background-image: linear-gradient(-225deg, #024A7B 0%, #4385AF 48%, #003058 100%);
 
             &#splide1 {
                 top: 0;
@@ -20,13 +20,13 @@
 
                 .splide__slide {
                     font-family: var(--mainEng-font);
-                    font-size: 2.5vw;
+                    font-size: 1.5vw;
 
                 }
             }
 
             &#splide2 {
-                bottom: 10px;
+                bottom: 0;
                 left: 0;
 
                 .splide__slide {
@@ -45,16 +45,16 @@
             .splide__list {
 
                 img {
-                    width: 2vw;
-                    filter: invert(1);
+                    width: 3vw;
+                    // filter: invert(1);
                 }
 
                 .splide__slide {
                     display: flex;
                     align-items: center;
                     flex-shrink: 0;
-                    padding: 20px;
-                    -webkit-text-stroke: rgba(255,255,255,.5) 1px;
+                    padding: 5px;
+                    -webkit-text-stroke: rgba(255, 255, 255, .5) 1px;
                     color: transparent;
                     text-transform: uppercase;
 
@@ -68,35 +68,89 @@
         }
     }
 
+
+
     .contact {
-        position: absolute;
-        left: 50%;
+        position: relative;
+        width: 60%;
         top: 50%;
-        transform: translate(-50%, -50%);
+        left: 50%;
+        transform: translateX(-50%);
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        text-align: center;
 
         li {
-            padding: 10px;
+            position: relative;
+            width: 250px;
             display: flex;
+            flex-direction: column;
             align-items: center;
-            gap: 10px;
-        }
+            justify-content: center;
+            cursor: pointer;
+            transition: .35s;
 
-        p {
-            display: inline-block;
-            font-family: var(--mainEng-font);
-            font-weight: 300;
-            letter-spacing: 1px;
-            font-size: 1vw;
-            line-height: 1.5;
-            text-transform: capitalize;
+            &:hover {
+                p {
+                    opacity: 1;
+                    bottom: -30px;
+                    transition: .35s;
+                }
+            }
 
             img {
-                width: 30px;
+                width: 50px;
                 filter: invert(1);
                 padding: 10px;
             }
 
+            p {
+                position: absolute;
+                bottom: -100px;
+                opacity: 0;
+            }
+
+
         }
+
+
+        // figure {
+        //     border: 1px solid #f00;
+        //     height: 100%;
+        //     display: flex;
+        //     flex-direction: column;
+        //     align-items: center;
+        //     justify-content: center;
+
+
+
+        //     figcaption {
+        //         // display: none;
+        //         transform: .35s;
+        //     }  
+        // }
+
+
+        // li {
+        //     padding: 10px;
+        //     display: flex;
+        //     align-items: center;
+        //     gap: 10px;
+        // }
+
+        // p {
+        //     display: inline-block;
+        //     font-family: var(--mainEng-font);
+        //     font-weight: 300;
+        //     letter-spacing: 1px;
+        //     font-size: 1vw;
+        //     line-height: 1.5;
+        //     text-transform: capitalize;
+
+
+
+        // }
 
 
     }
