--- a/src/css/pages/scss/footer.scss
+++ b/src/css/pages/scss/footer.scss
@@ -3,16 +3,15 @@
     overflow: hidden;
     height: 50vh;
     // background: linear-gradient(to bottom, #4385AF, #024A7B, #003058);
-
+background-color: #003058;
 
     .wsplide {
-        // position: relative;
-        z-index: 1;
 
         .splide {
             position: absolute;
             width: 100%;
-            background-image: linear-gradient(-225deg, #024A7B 0%, #4385AF 48%, #003058 100%);
+            background-image: linear-gradient(-225deg, #024A7B 0%, #4385AF 48%, #024A7B 100%);
+            padding: 20px 0;
 
             &#splide1 {
                 top: 0;
