--- a/src/css/pages/about.css
+++ b/src/css/pages/about.css
@@ -17,11 +17,11 @@
 #about .about_wrap .txt {
   position: sticky;
   left: 100px;
-  top: 20%;
+  top: 50%;
+  transform: translateY(-50%);
   width: 50%;
   height: 100%;
   display: flex;
-  margin-bottom: 300px;
 }
 #about .about_wrap .txt ul {
   margin-top: 30px;
@@ -68,14 +68,14 @@
   left: 0px;
   transform: translateY(-50%);
 }
-#about .about_wrap .cont {
+#about .about_wrap .cont-box {
   width: 50%;
 }
-#about .about_wrap .cont > li {
+#about .about_wrap .cont-box .cont {
   position: relative;
   height: 100vh;
 }
-#about .about_wrap .cont > li::after {
+#about .about_wrap .cont-box .cont::after {
   content: "";
   width: 1px;
   height: 100%;
@@ -85,39 +85,47 @@
   transform: translateY(-50%);
   background: repeating-linear-gradient(to bottom, transparent 0, transparent 5px, rgba(255, 255, 255, 0.2) 0px, rgba(255, 255, 255, 0.2) 15px);
 }
-#about .about_wrap .cont > li .about_title {
+#about .about_wrap .cont-box .cont.on .about_title::before {
+  width: 100%;
+}
+#about .about_wrap .cont-box .cont .about_title {
   position: absolute;
-  left: 22%;
-  top: 30%;
+  left: 18%;
+  top: 25%;
   font-family: var(--mainEng-font);
   font-size: 50px;
   text-transform: capitalize;
   font-style: italic;
   font-weight: 700;
-  padding-bottom: 50px;
   white-space: nowrap;
+  padding: 10px 30px 10px 10px;
+  z-index: 1;
 }
-#about .about_wrap .cont > li .about_title span {
+#about .about_wrap .cont-box .cont .about_title span {
   font-family: var(--mainKorL-font);
   font-size: 28px;
   font-weight: 500;
   font-style: normal;
   padding-left: 10px;
 }
-#about .about_wrap .cont > li .about-line {
-  width: 100%;
+#about .about_wrap .cont-box .cont .about_title::before {
+  content: "";
   position: absolute;
-  left: -6px;
-  top: 40%;
-  z-index: 10;
+  left: 0;
+  bottom: 0;
+  width: 0%;
+  height: 25px;
+  background-color: rgb(70, 130, 180);
+  z-index: -1;
+  transition: 0.35s;
 }
-#about .about_wrap .cont > li .txt_container {
+#about .about_wrap .cont-box .cont .txt_container {
   width: 70%;
   position: absolute;
   left: 22%;
-  top: 45%;
+  top: 35%;
 }
-#about .about_wrap .cont > li .txt_container li {
+#about .about_wrap .cont-box .cont .txt_container li {
   position: relative;
   font-family: var(--mainKorT-font);
   font-size: 1.2vw;
@@ -126,18 +134,18 @@
   margin: 20px 0;
   color: var(--subColor100-color);
 }
-#about .about_wrap .cont > li .txt_container li em {
+#about .about_wrap .cont-box .cont .txt_container li em {
   display: block;
 }
-#about .about_wrap .cont > li .txt_container li span {
+#about .about_wrap .cont-box .cont .txt_container li span {
   font-family: var(--mainKorL-font);
   margin: 10px 0;
   color: var(--white);
 }
-#about .about_wrap .cont .cont01 li {
+#about .about_wrap .cont-box .cont.cont01 li {
   margin: 20px 0;
 }
-#about .about_wrap .cont .cont01 .num {
+#about .about_wrap .cont-box .cont.cont01 .num {
   position: absolute;
   top: -30px;
   left: -20px;
@@ -148,30 +156,31 @@
   opacity: 0.3;
   line-height: 1;
 }
-#about .about_wrap .cont .cont01 .iam-title {
+#about .about_wrap .cont-box .cont.cont01 .iam-title {
   font-family: var(--mainKorM-font);
   font-size: 1.5vw;
   color: var(--subColor100-color);
 }
-#about .about_wrap .cont .cont01 .iam-title span {
+#about .about_wrap .cont-box .cont.cont01 .iam-title span {
   font-family: var(--mainEng-font);
   font-weight: 600;
   text-transform: capitalize;
   color: var(--white);
 }
-#about .about_wrap .cont .cont01 .iam-detail {
+#about .about_wrap .cont-box .cont.cont01 .iam-detail {
   font-size: 1.2vw;
   padding: 10px 0;
 }
-#about .about_wrap .cont .cont04 .txt_container li {
+#about .about_wrap .cont-box .cont.cont04 .txt_container li {
   margin: 0;
 }
-#about .about_wrap .cont .cont04 .txt_container.skill {
-  width: 400px;
+#about .about_wrap .cont-box .cont.cont04 .txt_container.skill {
+  width: 500px;
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
+  padding-top: 50px;
 }
-#about .about_wrap .cont .cont04 .txt_container.skill img {
+#about .about_wrap .cont-box .cont.cont04 .txt_container.skill img {
   width: 70px;
 }
