--- a/src/css/pages/home.css
+++ b/src/css/pages/home.css
@@ -14,7 +14,6 @@
 }
 #home h2 {
   font-family: var(--mainEng-font);
-  font-size: 3rem;
   font-weight: 600;
   letter-spacing: 1px;
   color: #fff;
@@ -50,7 +49,9 @@
 
 @media (max-width: 767px) {
   #home h2 {
-    font-size: 2.5rem;
+    font-size: 2rem;
+    padding: 10px;
+    line-height: 1.5;
   }
   #home p {
     font-size: 1rem;
@@ -66,7 +67,7 @@
 }
 @media (min-width: 1024px) {
   #home h2 {
-    font-size: 3.5rem;
+    font-size: 3rem;
   }
   #home p {
     font-size: 1.3rem;
