--- a/src/css/pages/scss/about.scss
+++ b/src/css/pages/scss/about.scss
@@ -17,11 +17,11 @@
         .txt {
             position: sticky;
             left: 100px;
-            top: 20%;
+            top: 50%;
+            transform: translateY(-50%);
             width: 50%;
             height: 100%;
             display: flex;
-            margin-bottom: 300px;
 
             ul {
                 margin-top: 30px;
@@ -77,13 +77,14 @@
         }
 
         /* right_cont */
-        .cont {
+        .cont-box {
             width: 50%;
 
-            >li {
+            .cont {
                 position: relative;
                 height: 100vh;
 
+                // 체크 테두리
                 &::after {
                     content: '';
                     width: 1px;
@@ -106,17 +107,28 @@
 
                 }
 
+                &.on {
+                    .about_title {
+                        &::before {
+                            width: 100%;
+                        }
+                    }
+
+                }
+
                 .about_title {
                     position: absolute;
-                    left: 22%;
-                    top: 30%;
+                    left: 18%;
+                    top: 25%;
                     font-family: var(--mainEng-font);
                     font-size: 50px;
                     text-transform: capitalize;
                     font-style: italic;
                     font-weight: 700;
-                    padding-bottom: 50px;
                     white-space: nowrap;
+                    padding: 10px 30px 10px 10px;
+                    z-index: 1;
+
 
                     span {
                         font-family: var(--mainKorL-font);
@@ -125,21 +137,26 @@
                         font-style: normal;
                         padding-left: 10px;
                     }
-                }
 
-                .about-line {
-                    width: 100%;
-                    position: absolute;
-                    left: -6px;
-                    top: 40%;
-                    z-index: 10;
+                    &::before {
+                        content: "";
+                        position: absolute;
+                        left: 0;
+                        bottom: 0;
+                        width: 0%;
+                        height: 25px;
+                        background-color: rgba(70, 130, 180, 1);
+                        z-index: -1;
+                        transition: .35s;
+                    }
+
                 }
 
                 .txt_container {
                     width: 70%;
                     position: absolute;
                     left: 22%;
-                    top: 45%;
+                    top: 35%;
 
                     li {
                         position: relative;
@@ -163,64 +180,66 @@
 
                     }
                 }
-            }
 
-            .cont01 {
-                li {
-                    margin: 20px 0;
-                }
-
-                .num {
-                    position: absolute;
-                    top: -30px;
-                    left: -20px;
-                    font-family: var(--mainNum-font);
-                    font-size: var(--font-size-Num1-P);
-                    font-style: italic;
-                    font-weight: 700;
-                    opacity: .3;
-                    line-height: 1;
-                }
-
-                .iam-title {
-                    font-family: var(--mainKorM-font);
-                    font-size: 1.5vw;
-                    color: var(--subColor100-color);
-
-                    span {
-                        font-family: var(--mainEng-font);
-                        font-weight: 600;
-                        text-transform: capitalize;
-                        color: var(--white);
-                    }
-                }
-
-                .iam-detail {
-                    font-size: 1.2vw;
-                    padding: 10px 0;
-                }
-
-            }
-
-            .cont04 {
-                .txt_container {
+                &.cont01 {
                     li {
-                        margin: 0;
+                        margin: 20px 0;
                     }
-
-                    &.skill {
-                        width: 400px;
-                        display: flex;
-                        flex-wrap: wrap;
-                        gap: 20px;
-
-
-                        img {
-                            width: 70px;
+    
+                    .num {
+                        position: absolute;
+                        top: -30px;
+                        left: -20px;
+                        font-family: var(--mainNum-font);
+                        font-size: var(--font-size-Num1-P);
+                        font-style: italic;
+                        font-weight: 700;
+                        opacity: .3;
+                        line-height: 1;
+                    }
+    
+                    .iam-title {
+                        font-family: var(--mainKorM-font);
+                        font-size: 1.5vw;
+                        color: var(--subColor100-color);
+    
+                        span {
+                            font-family: var(--mainEng-font);
+                            font-weight: 600;
+                            text-transform: capitalize;
+                            color: var(--white);
+                        }
+                    }
+    
+                    .iam-detail {
+                        font-size: 1.2vw;
+                        padding: 10px 0;
+                    }
+    
+                }
+    
+                &.cont04 {
+                    .txt_container {
+                        li {
+                            margin: 0;
+                        }
+    
+                        &.skill {
+                            width: 500px;
+                            display: flex;
+                            flex-wrap: wrap;
+                            gap: 20px;
+                            padding-top: 50px;
+     
+                            img {
+                                width: 70px;
+                            }
                         }
                     }
                 }
             }
+
+           
 
         }
     }
