--- a/src/css/pages/scss/footer.scss
+++ b/src/css/pages/scss/footer.scss
@@ -1,78 +1,82 @@
 #footer {
     position: relative;
     overflow: hidden;
-    height: 50vh;
-    // background: linear-gradient(to bottom, #4385AF, #024A7B, #003058);
-background-color: #003058;
+    height: 40vh;
+    background-color: #090a1b;
 
     .wsplide {
+        width: 100%;
+        background-color: #fff;
+        padding: 20px 0;
+        position: relative;
+        top: 0;
+        right: 0;
 
-        .splide {
-            position: absolute;
-            width: 100%;
-            background-image: linear-gradient(-225deg, #024A7B 0%, #4385AF 48%, #024A7B 100%);
-            padding: 20px 0;
-
-            &#splide1 {
-                top: 0;
-                right: 0;
-
-                .splide__slide {
-                    font-family: var(--mainEng-font);
-                    font-size: 1.5vw;
-
-                }
-            }
-
-            &#splide2 {
-                bottom: 0;
-                left: 0;
-
-                .splide__slide {
-                    font-family: var(--mainKorL-font);
-                    font-size: 1.5vw;
-
-                    &.is-active {
-                        color: var(--white);
-                    }
-                }
+        &:hover {
+            .background-image {
+                animation-play-state: paused;
             }
         }
 
-        .splide__track {
-
-            .splide__list {
-
-                img {
-                    width: 3vw;
-                    // filter: invert(1);
-                }
-
-                .splide__slide {
-                    display: flex;
-                    align-items: center;
-                    flex-shrink: 0;
-                    padding: 5px;
-                    -webkit-text-stroke: rgba(255, 255, 255, .5) 1px;
-                    color: transparent;
-                    text-transform: uppercase;
-
-                    &.is-active {
-                        color: var(--white);
-                    }
-                }
+        #splide1 {
+            .splide__slide {
+                font-family: var(--mainKorM-font);
+                font-size: 1.5rem;
             }
 
+            .splide__track {
 
+                .splide__list {
+
+                    .splide__slide {
+                        display: flex;
+                        align-items: center;
+                        flex-shrink: 0;
+                        padding: 5px;
+                        color: rgba(11, 12, 31, .5);
+                        text-transform: uppercase;
+
+                        &.is-active {
+                            color: #0B0C1F;
+                            font-family: var(--mainKorB-font);
+
+                        }
+                    }
+                }
+
+
+            }
+        }
+
+        .background-image {
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: -18px;
+            height: 50px;
+            background-image: url('/src/assets/images/circle.png');
+            /* 원형 이미지 */
+            background-repeat: repeat;
+            background-size: 60px 50px;
+            animation: moveBackground 25s linear infinite;
+            filter: invert(1);
+        }
+
+        @keyframes moveBackground {
+            0% {
+                background-position: 100% 0;
+            }
+
+            100% {
+                background-position: 0 0;
+            }
         }
     }
-
-
 
     .contact {
         position: relative;
         width: 60%;
-        top: 50%;
+        top: 35%;
         left: 50%;
         transform: translateX(-50%);
         display: flex;
@@ -112,46 +116,6 @@ background-color: #003058;
 
 
         }
-
-
-        // figure {
-        //     border: 1px solid #f00;
-        //     height: 100%;
-        //     display: flex;
-        //     flex-direction: column;
-        //     align-items: center;
-        //     justify-content: center;
-
-
-
-        //     figcaption {
-        //         // display: none;
-        //         transform: .35s;
-        //     }  
-        // }
-
-
-        // li {
-        //     padding: 10px;
-        //     display: flex;
-        //     align-items: center;
-        //     gap: 10px;
-        // }
-
-        // p {
-        //     display: inline-block;
-        //     font-family: var(--mainEng-font);
-        //     font-weight: 300;
-        //     letter-spacing: 1px;
-        //     font-size: 1vw;
-        //     line-height: 1.5;
-        //     text-transform: capitalize;
-
-
-
-        // }
-
-
     }
 
 }
