--- a/src/css/pages/scss/path.scss
+++ b/src/css/pages/scss/path.scss
@@ -12,6 +12,7 @@
 }
 
 .jellyfish1 {
+    display: block;
     height: 60px;
     width: 60px;
     background-image: url(/src/assets/images/jellyfish1.png);
@@ -25,6 +26,7 @@
     position: absolute;
     animation: bounce-top 1s infinite;
     z-index: 99;
+    display: none;
 }
 
 .jellyfish2{
