--- a/src/css/pages/title.css
+++ b/src/css/pages/title.css
@@ -3,7 +3,6 @@
 }
 .title span {
   display: inline-block;
-  font-size: 4vw;
   line-height: 1.6;
   font-family: var(--mainEng-font);
   font-weight: 600;
@@ -14,7 +13,7 @@
   background-repeat: no-repeat;
   transition: 1s;
   color: transparent;
-  background-image: linear-gradient(-225deg, #5D9FFF 0%, #B8DCFF 48%, #6BBBFF 100%);
+  background-image: linear-gradient(-225deg, rgb(93, 159, 255) 0%, #B8DCFF 48%, #6BBBFF 100%);
   background-size: 0 100%;
   cursor: pointer;
 }
@@ -25,7 +24,6 @@
   display: block;
   font-family: var(--mainKorT-font);
   letter-spacing: 1px;
-  font-size: 1.2vw;
   -webkit-text-stroke: none;
   line-height: 1.5;
 }
@@ -38,23 +36,26 @@
   text-align: center;
 }
 
-.work_title {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  white-space: nowrap;
-}
-
-.graphic_title {
-  position: sticky;
-  left: 50%;
-  transform: translateX(-50%);
-  top: 10%;
-  text-align: center;
-}
-
 .footer_title {
   position: absolute;
+}
+
+@media (max-width: 767px) {
+  .title span {
+    font-size: 2.5rem;
+  }
+  .title em {
+    width: 330px;
+    margin: auto;
+    font-size: 1rem;
+  }
+}
+@media (min-width: 768px) {
+  .title span {
+    font-size: 4rem;
+  }
+  .title em {
+    font-size: 1.1rem;
+    white-space: nowrap;
+  }
 }
